--- a/Admin/package.json
+++ b/Admin/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "jquery": "^3.6.4",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
