--- a/Admin/package.json
+++ b/Admin/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "jquery": "^3.6.4",
