--- a/Client/angular.json
+++ b/Client/angular.json
@@ -28,10 +28,11 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "./node_modules/swiper/swiper-bundle.css"
+              "./node_modules/swiper/swiper-bundle.min.css"
               ],
               "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/swiper/swiper-bundle.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
               ]
           },
