--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "localStorage": "^1.0.4",
     "mongodb": "^5.1.0",
     "mongoose": "^7.1.0"
   },
