--- a/Admin/package.json
+++ b/Admin/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ckeditor/ckeditor5-angular": "^6.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^37.1.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
