--- a/Admin/package.json
+++ b/Admin/package.json
@@ -28,6 +28,7 @@
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.30.0",
     "jquery": "^3.6.4",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
