--- a/Client/package.json
+++ b/Client/package.json
@@ -22,10 +22,12 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.5",
     "swiper": "^9.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
